--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -21,7 +21,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="4f23a" class="javax.swing.JButton" binding="menuPrincipalButton" default-binding="true">
+          <component id="4f23a" class="javax.swing.JButton" binding="btn_menu_principal">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -31,7 +31,7 @@
               <text value="Menu Principal"/>
             </properties>
           </component>
-          <component id="1b463" class="javax.swing.JButton" binding="cuentasBancariasButton" default-binding="true">
+          <component id="1b463" class="javax.swing.JButton" binding="btn_cuentas_bancarias">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -41,7 +41,7 @@
               <text value="Cuentas Bancarias"/>
             </properties>
           </component>
-          <component id="dbcd0" class="javax.swing.JButton" binding="plazosFijosButton" default-binding="true">
+          <component id="dbcd0" class="javax.swing.JButton" binding="btn_plazo_fijo">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -51,7 +51,7 @@
               <text value="Plazos Fijos"/>
             </properties>
           </component>
-          <component id="dbcdf" class="javax.swing.JButton" binding="prestamosButton" default-binding="true">
+          <component id="dbcdf" class="javax.swing.JButton" binding="btn_prestamos">
             <constraints>
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -61,7 +61,7 @@
               <text value="Prestamos"/>
             </properties>
           </component>
-          <component id="37772" class="javax.swing.JButton" binding="tarjetaDeCreditoButton" default-binding="true">
+          <component id="37772" class="javax.swing.JButton" binding="btn_tarjeta_credito">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -71,7 +71,7 @@
               <text value="Tarjeta de credito"/>
             </properties>
           </component>
-          <component id="b5c25" class="javax.swing.JButton" binding="stocksButton" default-binding="true">
+          <component id="b5c25" class="javax.swing.JButton" binding="btn_stocks">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -81,7 +81,7 @@
               <text value="Stocks"/>
             </properties>
           </component>
-          <component id="6c724" class="javax.swing.JButton" binding="ingresosYGastosButton" default-binding="true">
+          <component id="6c724" class="javax.swing.JButton" binding="btn_ingresos_gastos">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -152,7 +152,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="82d23" class="javax.swing.JTextField" binding="tfFuenteIngreso">
+          <component id="82d23" class="javax.swing.JTextField" binding="tf_fuente_ingreso">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -178,7 +178,7 @@
               <text value="Cuenta de Banco"/>
             </properties>
           </component>
-          <component id="7475e" class="javax.swing.JComboBox" binding="cbCuentaBancoIng">
+          <component id="7475e" class="javax.swing.JComboBox" binding="cb_cuenta_banco_ingreso">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -200,7 +200,7 @@
               <text value="Frecuencia"/>
             </properties>
           </component>
-          <component id="9224" class="javax.swing.JComboBox" binding="cbFrecuenciaIng">
+          <component id="9224" class="javax.swing.JComboBox" binding="cb_frecuencia_ing">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -231,7 +231,7 @@
               <text value="Fecha"/>
             </properties>
           </component>
-          <grid id="6077a" binding="FechaIngresoPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="6077a" binding="fecha_ingreso_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -248,7 +248,7 @@
               <text value="Frecuencia"/>
             </properties>
           </component>
-          <component id="9db83" class="javax.swing.JTextField" binding="tfMontoIngr">
+          <component id="9db83" class="javax.swing.JTextField" binding="tf_monto_ingreso">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -282,7 +282,7 @@
               <text value="Monto"/>
             </properties>
           </component>
-          <component id="3c106" class="javax.swing.JComboBox" binding="cbCuentaBAncoGast">
+          <component id="3c106" class="javax.swing.JComboBox" binding="cb_cuenta_banco">
             <constraints>
               <grid row="3" column="13" row-span="1" col-span="4" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -292,7 +292,7 @@
               </model>
             </properties>
           </component>
-          <component id="7069a" class="javax.swing.JComboBox" binding="cbFrecuenciaGast">
+          <component id="7069a" class="javax.swing.JComboBox" binding="cb_frecuencia_gasto">
             <constraints>
               <grid row="4" column="13" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -315,7 +315,7 @@
               </model>
             </properties>
           </component>
-          <component id="2616f" class="javax.swing.JTextField" binding="tfFuenteGasto">
+          <component id="2616f" class="javax.swing.JTextField" binding="tf_fuente_gasto">
             <constraints>
               <grid row="2" column="13" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -323,7 +323,7 @@
             </constraints>
             <properties/>
           </component>
-          <grid id="852e7" binding="FechaGastosPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="852e7" binding="fecha_gastos_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="5" column="13" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -340,7 +340,7 @@
               <text value="Nombre"/>
             </properties>
           </component>
-          <component id="c7996" class="javax.swing.JTextField" binding="tfNombreIngresos">
+          <component id="c7996" class="javax.swing.JTextField" binding="tf_nombre_ingresos">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -366,7 +366,7 @@
               <text value="Fuente"/>
             </properties>
           </component>
-          <component id="ee05f" class="javax.swing.JTextField" binding="tfNombreGasto">
+          <component id="ee05f" class="javax.swing.JTextField" binding="tf_nombre_gasto">
             <constraints>
               <grid row="0" column="13" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -374,7 +374,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="c53e6" class="javax.swing.JButton" binding="btnAgregarIngr">
+          <component id="c53e6" class="javax.swing.JButton" binding="btn_agregar_ingr">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -382,7 +382,7 @@
               <text value="Agregar Ingreso"/>
             </properties>
           </component>
-          <component id="90168" class="javax.swing.JButton" binding="btnAgregarGast">
+          <component id="90168" class="javax.swing.JButton" binding="btn_agregar_gast">
             <constraints>
               <grid row="7" column="13" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -390,7 +390,7 @@
               <text value="Agregar Gastos"/>
             </properties>
           </component>
-          <component id="30fad" class="javax.swing.JTextField" binding="tfMontoGastos">
+          <component id="30fad" class="javax.swing.JTextField" binding="tf_monto_gasto">
             <constraints>
               <grid row="6" column="13" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -416,7 +416,7 @@
               <text value="Inserta el ID del Gasto"/>
             </properties>
           </component>
-          <component id="72e80" class="javax.swing.JTextField" binding="tfIngresoID">
+          <component id="72e80" class="javax.swing.JTextField" binding="tf_ingreso_id">
             <constraints>
               <grid row="9" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -424,7 +424,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="72a9b" class="javax.swing.JTextField" binding="tfGastoID">
+          <component id="72a9b" class="javax.swing.JTextField" binding="tf_gasto_id">
             <constraints>
               <grid row="10" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -432,7 +432,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="14c02" class="javax.swing.JButton" binding="eliminarIngresoButton">
+          <component id="14c02" class="javax.swing.JButton" binding="btn_eliminar_ing">
             <constraints>
               <grid row="9" column="8" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -440,7 +440,7 @@
               <text value="Eliminar Ingreso"/>
             </properties>
           </component>
-          <component id="70992" class="javax.swing.JButton" binding="eliminarGastoButton">
+          <component id="70992" class="javax.swing.JButton" binding="btn_eliminar_gasto">
             <constraints>
               <grid row="10" column="9" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -466,7 +466,7 @@
               <text value="Acreedor"/>
             </properties>
           </component>
-          <component id="e571e" class="javax.swing.JTextField" binding="tfAcreedor">
+          <component id="e571e" class="javax.swing.JTextField" binding="tf_acreedor_gast">
             <constraints>
               <grid row="1" column="13" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -474,19 +474,35 @@
             </constraints>
             <properties/>
           </component>
-          <scrollpane id="8a194" binding="spIngresoGastos">
+          <scrollpane id="8a194" binding="sp_ingreso_gastos">
             <constraints>
               <grid row="11" column="2" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="aa12" class="javax.swing.JTable" binding="tableIngresosGastos">
+              <component id="aa12" class="javax.swing.JTable" binding="table_ingresos_gastos">
                 <constraints/>
                 <properties/>
               </component>
             </children>
           </scrollpane>
+          <component id="f3deb" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Acreedor"/>
+            </properties>
+          </component>
+          <component id="dd40d" class="javax.swing.JTextField" binding="tf_acreedor_ingr">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <component id="fc053" class="javax.swing.JLabel">
