--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -315,7 +315,7 @@
               </model>
             </properties>
           </component>
-          <component id="2616f" class="javax.swing.JTextField" binding="tf_fuente_gasto">
+          <component id="2616f" class="javax.swing.JTextField" binding="tf_descripcion_gasto">
             <constraints>
               <grid row="2" column="13" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -363,7 +363,7 @@
               <grid row="2" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Fuente"/>
+              <text value="descripción"/>
             </properties>
           </component>
           <component id="ee05f" class="javax.swing.JTextField" binding="tf_nombre_gasto">
@@ -492,10 +492,10 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Acreedor"/>
+              <text value="descripcion"/>
             </properties>
           </component>
-          <component id="dd40d" class="javax.swing.JTextField" binding="tf_acreedor_ingr">
+          <component id="dd40d" class="javax.swing.JTextField" binding="tf_descripcion_ingr">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
