--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="IngresosYGastosPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1769" height="596"/>
+      <xy x="20" y="20" width="1769" height="609"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -144,7 +144,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <grid id="c281c" layout-manager="GridLayoutManager" row-count="14" column-count="29" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c281c" layout-manager="GridLayoutManager" row-count="16" column-count="29" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -374,17 +374,9 @@
             </constraints>
             <properties/>
           </component>
-          <component id="c53e6" class="javax.swing.JButton" binding="btn_agregar_ingr">
-            <constraints>
-              <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Agregar Ingreso"/>
-            </properties>
-          </component>
           <component id="90168" class="javax.swing.JButton" binding="btn_agregar_gast">
             <constraints>
-              <grid row="7" column="13" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="13" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Agregar Gastos"/>
@@ -402,7 +394,7 @@
           </component>
           <component id="a6c6" class="javax.swing.JLabel">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Inserta el ID del Ingreso:"/>
@@ -410,7 +402,7 @@
           </component>
           <component id="5ff24" class="javax.swing.JLabel">
             <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Inserta el ID del Gasto"/>
@@ -418,7 +410,7 @@
           </component>
           <component id="72e80" class="javax.swing.JTextField" binding="tf_ingreso_id">
             <constraints>
-              <grid row="9" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="11" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -426,7 +418,7 @@
           </component>
           <component id="72a9b" class="javax.swing.JTextField" binding="tf_gasto_id">
             <constraints>
-              <grid row="10" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="12" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -434,7 +426,7 @@
           </component>
           <component id="14c02" class="javax.swing.JButton" binding="btn_eliminar_ing">
             <constraints>
-              <grid row="9" column="8" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="8" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Eliminar Ingreso"/>
@@ -442,7 +434,7 @@
           </component>
           <component id="70992" class="javax.swing.JButton" binding="btn_eliminar_gasto">
             <constraints>
-              <grid row="10" column="9" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="9" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Eliminar Gasto"/>
@@ -450,12 +442,12 @@
           </component>
           <hspacer id="2434e">
             <constraints>
-              <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <vspacer id="a5dd9">
             <constraints>
-              <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="15" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="7204f" class="javax.swing.JLabel">
@@ -476,7 +468,7 @@
           </component>
           <scrollpane id="8a194" binding="sp_ingreso_gastos">
             <constraints>
-              <grid row="11" column="2" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="13" column="2" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -502,6 +494,48 @@
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="c1042" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="7" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Categoria"/>
+            </properties>
+          </component>
+          <component id="24973" class="javax.swing.JComboBox" binding="cb_Categoria">
+            <constraints>
+              <grid row="7" column="13" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="99e75" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="8" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Estatus"/>
+            </properties>
+          </component>
+          <component id="e3310" class="javax.swing.JComboBox" binding="cb_estatus">
+            <constraints>
+              <grid row="8" column="13" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <model>
+                <item value="Selecciona una opción"/>
+                <item value="Activo"/>
+                <item value="Inactivo"/>
+              </model>
+            </properties>
+          </component>
+          <component id="c53e6" class="javax.swing.JButton" binding="btn_agregar_ingr">
+            <constraints>
+              <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Agregar Ingreso"/>
+            </properties>
           </component>
         </children>
       </grid>
